[tool.poetry]
name = "fassion-reco-be"
version = "0.1.0"
description = ""
authors = ["Pictogram23 <shanchengyinger@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
numpy = "^2.2.6"
scipy = "^1.15.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
